syntax = "proto3";
package tutorial;

import "google/protobuf/empty.proto";

option go_package = "github.com/lcmaguire/protoc-gen-go-goo/example";

// todo make aip approved

service ExampleService {
    rpc GetExample(SearchRequest) returns (SearchResponse);
    rpc CreateExample(SearchRequest) returns (SearchResponse);
    rpc ListExamples(SearchRequest) returns (SearchResponse);
    rpc DeleteExamples(SearchRequest) returns (SearchResponse);
}

service ExtraExampleService {
    rpc GetExample(SearchRequest) returns (SearchResponse);
    rpc DeleteExamples(SearchRequest) returns (google.protobuf.Empty);
}

message SearchRequest {
    string name = 1;
    string display_name = 2;
}

message SearchResponse {
    string name = 1;
}